--- a/app/templates/posts/post_form.html
+++ b/app/templates/posts/post_form.html
@@ -11,7 +11,7 @@
                    value="{{ _('Post') }}" 
                    class="button button-primary u-pull-right u-add-margin-left">
 
-            <label for="images" class="button-icon u-pull-right u-add-margin-right">
+            <label for="images" class="button-icon u-pull-right">
                 <img src="{{ url_for('static', filename='open-iconic/png/image-3x.png') }}">
                 <small>Add Image</small>
             </label>
