--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -7,28 +7,28 @@ section (app/templates/styleguide/templating#discussion-helpers)
 
 {% macro render_post(cause, post) %}
 <div class="post">
+    <p class="u-remove-margin-top u-remove-margin-bottom">
+        {{ render_avatar(post.author) }}&nbsp;said:
+    </p>
     <article id="post-body-{{ post.id }}">
         {{ post.body | markdown | striptags | truncate(90, True) }} 
         {% for image in post.images.all() %}
             <image src="{{ image.image_path|resize('50x50', fill=True) }}" />
         {% endfor %}
     </article>
-    <p class="u-add-margin-top u-remove-margin-bottom">
-        <small>
-            {{ render_avatar(post.author) }}&nbsp;
-            <a href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
-                {{ post.created_on.strftime('%b. %d, %Y') }}
-            </a>
-            {% if post.author == current_user or current_user.is_admin %}
-            <a href="{{ url_for('posts.post_edit', slug=cause.slug, pk=post.id) }}">
-                {{ _('(edit)') }}
-            </a>
-            <img class="icon u-add-margin-left" 
-                src="{{ url_for('static', filename='open-iconic/png/comment-square-2x.png') }}"> 
-            {{ _('%(count)s comments', count=post.comments.count()) }}
-            {% endif %}
-        </small>
-    </p>
+    <small>
+        <a href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
+            {{ post.created_on.strftime('%b. %d, %Y') }}:
+        </a>
+        {% if post.author == current_user or current_user.is_admin %}
+        <a href="{{ url_for('posts.post_edit', slug=cause.slug, pk=post.id) }}">
+            {{ _('(edit)') }}
+        </a>
+        <img class="icon u-add-margin-left" 
+            src="{{ url_for('static', filename='open-iconic/png/comment-square-2x.png') }}"> 
+        {{ _('%(count)s comments', count=post.comments.count()) }}
+        {% endif %}
+    </small>
 </div>
 {% endmacro %}
 
