Load post image preview javascript only when user is authenticated, otherwise cause template breaks

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -39,7 +39,9 @@
 <script src="{{ url_for('static', filename='jquery.lazy/jquery.lazy.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bxslider-4/dist/jquery.bxslider.min.js') }}"></script>
 <script src="{{ url_for('static', filename='autosize/dist/autosize.min.js') }}"></script>
+{% if current_user.is_authenticated %}
 <script src="{{ url_for('static', filename='js/post_image_preview.js') }}"></script>
+{% endif %}
 <script>
     $(document).ready(function() {
         $('.actions-slider').bxSlider({
