--- a/app/templates/posts/post.html
+++ b/app/templates/posts/post.html
@@ -3,6 +3,10 @@
 
 {% block title %}{{ post.title }} - {{ super() }}{% endblock title %}
 
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/modal.js') }}"></script>
+{% endblock %}
+
 {% block content %}
 {% from "helpers/users.html" import render_avatar %}
 <div class="full-width-container">
@@ -18,10 +22,20 @@
     <div class="row u-add-margin-top">
         <div class="one-half column">
             <div class="post u-remove-margin-top u-add-margin-bottom">
-                <h2 class="u-pull-left">{{ post.title }}</h2>
+                {% if post.title %}<h2 class="u-pull-left">{{ post.title }}</h2>{% endif %}
                 <article class="u-cf">
                     {% for image in post.images.all() %}
-                        <image src="{{ image.image_path|resize('200x200', fill=True) }}" />
+                        <a data-target="modal-post-image-{{ post.id }}">
+                            <image src="{{ image.image_path|resize('200x200', fill=True) }}" />
+                        </a>
+                        <div id="modal-post-image-{{ post.id }}" class="modal">
+                            <div style="width:initial; display:inline-block">
+                                <a class="button-modal-close u-pull-right">
+                                    <img src="{{ url_for('static', filename='open-iconic/png/x-2x.png') }}" alt="X" style="margin-bottom:0.5em" />
+                                </a>
+                                <img class="u-cf" src="{{ image.image_url }}" />
+                            </div>
+                        </div>
                     {% endfor %}
                     {{ post.body|markdown }}
                 </article>
