Added full cause description back. Split cause info, conversation and description into 3 columns.

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -596,6 +596,9 @@ a.support-action {
     flex: auto;
     min-height: 2em;
 }
+#post {
+    margin-bottom: 0;
+}
 #post #preview ul {
     margin-left: 0;
 }
