--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -247,7 +247,7 @@
             {% if current_user.is_authenticated %}
                 {% include 'posts/post_form.html' %}
             {% else %}
-                <small class="u-text-center" style="display:block; background-color:#fbfaf9; padding:1em;">
+                <small class="posting-unauthorized u-text-center">
                     Only supporters can post messages. 
                     Please <a href="{{ url_for('users.login') }}">log in</a>.
                 </small>
