--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -25,27 +25,36 @@ section (app/templates/styleguide/templating#cause-helpers)
     9: 'posted a reply',
     }
 %}
+{% set log_loop = namespace(previous=log[0].logged_at.strftime('%b. %d, %Y')) %}
 {% for event in log %}
-<div class="feed-item">
-    {% if event.event_type_id in [1,2,3,4] %}
-    <p>
-        {{ render_avatar(event.user) }}&nbsp;
-        {{ captions[event.event_type_id] }}:
-        <a class="feed-link"  href="{{ url_for('causes.cause_detail', slug=event.item.slug) }}">
-            {{ event.item.title }}
-        </a>
-    </p>
-    {% elif event.event_type_id in [5,6,7] %}
-    <p>
-        {{ render_avatar(event.user) }}&nbsp;
-        {{ captions[event.event_type_id] }}:
-        <a class="feed-link"  data-target="modal-action-{{ event.item.id }}">
-            {{ event.item.title }}
-        </a>
-    </p>
-    {% elif event.event_type_id in [8] %}
-        {{ render_post(event.item.cause, event.item) }}
+    {% if log_loop.previous != event.logged_at.strftime('%b. %d, %Y') %} 
+        <small class="feed-separator">
+            <span>
+                {{ event.logged_at.strftime('%b. %d, %Y') }}
+            </span>
+        </small>
     {% endif %}
-</div>
+    {% set log_loop.previous = event.logged_at.strftime('%b. %d, %Y') %} 
+    <div class="feed-item">
+        {% if event.event_type_id in [1,2,3,4] %}
+        <p>
+            {{ render_avatar(event.user) }}&nbsp;
+            {{ captions[event.event_type_id] }}:
+            <a class="feed-link"  href="{{ url_for('causes.cause_detail', slug=event.item.slug) }}">
+                {{ event.item.title }}
+            </a>
+        </p>
+        {% elif event.event_type_id in [5,6,7] %}
+        <p>
+            {{ render_avatar(event.user) }}&nbsp;
+            {{ captions[event.event_type_id] }}:
+            <a class="feed-link"  data-target="modal-action-{{ event.item.id }}">
+                {{ event.item.title }}
+            </a>
+        </p>
+        {% elif event.event_type_id in [8] %}
+            {{ render_post(event.item.cause, event.item) }}
+        {% endif %}
+    </div>
 {% endfor %}
 {% endmacro %}
