--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -25,7 +25,7 @@ section (app/templates/styleguide/templating#cause-helpers)
     9: 'posted a reply',
     }
 %}
-{% set log_loop = namespace(previous=log[0].logged_at.strftime('%b. %d, %Y')) %}
+{% set log_loop = namespace(previous=None) %}
 {% for event in log %}
     {% if log_loop.previous != event.logged_at.strftime('%b. %d, %Y') %} 
         <small class="feed-separator">
