--- a/app/templates/causes/cause_form.html
+++ b/app/templates/causes/cause_form.html
@@ -33,6 +33,13 @@
         </div>
         <div class="row">
             <fieldset>
+                <div class="six columns offset-by-three">
+                    {{ render_field(form_trans.story_content, class="u-full-width") }}
+                </div>
+            </fieldset>
+        </div>
+        <div class="row">
+            <fieldset>
                 <div class="three columns offset-by-three">
                     <input id="save" type="submit" value="Save"
                         class="button button-primary u-mobile-fixed-bottom">
